<docs>: adicionada documentação XML no projeto

--- a/Back-end/Back-end.csproj
+++ b/Back-end/Back-end.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Back_end</RootNamespace>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <DocumentationFile>documentation/Back-end.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
