--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - teste
-  pull_request:
-    branches:
-      - teste
 
 env:
   JWT_ISSUER: ${{ secrets.JWT_ISSUER }}
@@ -16,74 +13,71 @@ env:
 jobs:
   build-backend:
     runs-on: windows-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '8.0.401'
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.401'
 
-    - name: Install dependencies
-      run: dotnet restore
+      - name: Install dependencies
+        run: dotnet restore
 
-    - name: Apply database migrations
-      run: dotnet ef database update
-      env:
-        ConnectionStrings__DefaultConnection: ${{ secrets.CONNECTION_STRING }}
+      - name: Apply database migrations
+        run: dotnet ef database update
+        env:
+          ConnectionStrings__DefaultConnection: ${{ secrets.CONNECTION_STRING }}
 
-    - name: Build project
-      run: dotnet build
+      - name: Build project
+        run: dotnet build
 
-    - name: Run backend application
-      run: dotnet run --project Back-end/Back-end.csproj &
+      - name: Run backend application
+        run: dotnet run --project Back-end/Back-end.csproj
     
   build-frontend:
     runs-on: windows-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '8.0.401'
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.401'
 
-    - name: Install dependencies
-      run: dotnet restore
+      - name: Install dependencies
+        run: dotnet restore
 
-    - name: Build project
-      run: dotnet build
+      - name: Build project
+        run: dotnet build
 
-    - name: Run frontend application
-      run: dotnet run --project Front-end/Front-end.csproj
+      - name: Run frontend application
+        run: dotnet run --project Front-end/Front-end.csproj
 
   run-tests:
     runs-on: windows-latest
     needs: [build-backend, build-frontend]
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '8.0.401'
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.401'
 
-    - name: Install dependencies
-      run: dotnet restore
+      - name: Install dependencies
+        run: dotnet restore
 
-    - name: Wait for backend and frontend to start
-      run: |
-        echo "Aguardando 10 segundo"
-        sleep 10
+      - name: Wait for backend and frontend
+        run: |
+          echo "Wait for 15 seconds."
+          sleep 15 
 
-    - name: Run unit tests
-      run: dotnet test --project testeDeUnidade
+      - name: Run unit tests
+        run: dotnet test --project testeDeUnidade
 
-    - name: Run system tests
-      run: dotnet test --project testeDeSistema
+      - name: Run system tests
+        run: dotnet test --project testeDeSistema
