--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -23,28 +23,34 @@ jobs:
           dotnet-version: '8.0.401'
 
       - name: Install dependencies
-        run: dotnet restore Back-end/Back-end.csproj
+        run: |
+          cd Back-end
+          dotnet restore
 
       - name: Install dotnet-ef tool
-        run: dotnet tool install --global dotnet-ef
+        run: |
+          cd Back-end
+          dotnet tool install --global dotnet-ef
 
       - name: Add dotnet tools to PATH
         run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-      - name: Change directory to Back-end
-        run: cd Back-end
-
       - name: Apply database migrations
-        run: dotnet ef database update --project Back-end.csproj
+        run: |
+          cd Back-end
+          dotnet ef database update
         env:
           ConnectionStrings__DefaultConnection: ${{ secrets.CONNECTION_STRING }}
 
       - name: Build project
-        run: dotnet build Back-end.csproj
+        run: |
+          cd Back-end
+          dotnet build
 
       - name: Run backend application
-        run: dotnet run --project Back-end.csproj
-
+        run: |
+          cd Back-end
+          dotnet run
     
   build-frontend:
     runs-on: windows-latest
